<resources>
    <string name="app_name">Root Checker</string>
    <string name="root_status">Root Status</string>
    <string name="check_root">Check Root</string>
    <string name="model">Model:</string>
    <string name="os">OS:</string>
    <string name="brand">Brand:</string>
    <string name="not_rooted">Not Rooted</string>
    <string name="rooted">Rooted</string>
    <string name="action_rate">Rate</string>
    <string name="rate_msg">Rate us 5 stars if you like it. It matters much for us~</string>
    <string name="goto_rate">Go to Rate</string>
    <string name="cancel">Cancel</string>
    <string name="test_keys">Your rom is test-keys, you may have root grant via adb</string>
</resources>
