<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/id_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/ToolBarStyle" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="4dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id_root_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:text="@string/root_status"
                    android:typeface="monospace" />

                <View
                    android:id="@+id/id_root_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@id/id_root_status"
                    android:background="@android:color/black" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/id_root_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_root_divider"
                    android:layout_margin="31dp"
                    android:src="@drawable/root_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_root_divider"
                    android:layout_toRightOf="@id/id_root_icon">

                    <TextView
                        android:id="@+id/id_check_root"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/check_root"
                        android:textSize="18dp"
                        android:padding="9dp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/id_model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/id_check_root"
                        android:text="@string/model"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/id_os"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/id_model"
                        android:text="@string/os"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/id_brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/id_os"
                        android:text="@string/brand"
                        android:typeface="monospace" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            ads:adUnitId="ca-app-pub-5644941632262899/6057939174"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>